WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284695
Unreviewed, fix crashes on the bots after
287824@main
https://bugs.webkit.org/show_bug.cgi?id=284695
Summary
Unreviewed, fix crashes on the bots after 287824@main
Chris Dumez
Reported
2024-12-14 13:49:22 PST
We're using the wrong size for the memset() in CoreAudioCaptureDeviceManager.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-12-14 13:49:23 PST
<
rdar://problem/141493029
>
Chris Dumez
Comment 2
2024-12-14 13:50:50 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37973
EWS
Comment 3
2024-12-14 14:17:34 PST
Committed
287843@main
(427803f95640): <
https://commits.webkit.org/287843@main
> Reviewed commits have been landed. Closing PR #37973 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug