Unreviewed, fix crashes on the bots after 287824@main https://bugs.webkit.org/show_bug.cgi?id=284695 rdar://141493029

We're using the wrong size of the memset in CoreAudioCaptureDeviceManager
because the type of the span is not bytes but the size is in bytes.

* Source/WebCore/platform/mediastream/mac/CoreAudioCaptureDeviceManager.cpp:
(WebCore::deviceHasStreams):

Canonical link: https://commits.webkit.org/287843@main